Colaboratory를 통해 생성됨

--- a/Untitled66.ipynb
+++ b/Untitled66.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled66.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPYt1fNmWgXl0ZHlARumJj5",
+      "authorship_tag": "ABX9TyM6t7F2LmlKWlKu0SiFX7Fk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lvmv6l9AkDWA",
-        "outputId": "2cc312f2-c0be-4681-aa94-8cea8d5b52aa"
+        "outputId": "31ce6890-db33-4e8c-8582-17805583ca25"
       },
       "source": [
         "def ab():\n",
@@ -45,7 +45,11 @@
         "  print(\"ss = {0}\".format(ss))\n",
         "\n",
         "\n",
-        "  if fs[2] == ss[2] and fs[3] == ss[3] or  \n",
+        "  if fs[2] == ss[0] and fs[3]  == ss[1]  :\n",
+        "    print(\"POINT\")\n",
+        "  \n",
+        "  elif fs[2] == ss[0] and fs[1] == ss[3] and fs[1] > ss[1] and fs[3] < ss[2]:\n",
+        "    print(\"POINT\")\n",
         "\n",
         "  elif fs[1] >= ss[1] and fs[2] > ss[1] : # FACE \n",
         "    print(\"FACE\") \n",
@@ -58,15 +62,15 @@
         "\n",
         "ab()"
       ],
-      "execution_count": 34,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "값을 입력해라 : 3 5 9 10\n",
-            "값을 입력해라 : 5 4 8 11\n",
-            "fs = [3, 5, 9, 10]\n",
-            "ss = [5, 4, 8, 11]\n",
+            "값을 입력해라 : 3 4 4 6\n",
+            "값을 입력해라 : 4 3 6 4\n",
+            "fs = [3, 4, 4, 6]\n",
+            "ss = [4, 3, 6, 4]\n",
             "FACE\n"
           ],
           "name": "stdout"
