Colaboratory를 통해 생성됨

--- a/Untitled71_ipynb의_사본.ipynb
+++ b/Untitled71_ipynb의_사본.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled71.ipynb의 사본",
       "provenance": [],
-      "authorship_tag": "ABX9TyPSoTPmMtDBbO2EVvGih7GK",
+      "authorship_tag": "ABX9TyNhrrZUb2f+E+LJ0UjIPwS1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -99,92 +99,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 141
-        },
-        "id": "CQogLEQpLn8O",
-        "outputId": "e939a5d0-7294-48cc-ae58-8b02e9023e33"
-      },
-      "source": [
-        "li = \"4177252841\"\n",
-        "k = 4\n",
-        "result = \"\"\n",
-        "result1 =[]\n",
-        "an =\"\"\n",
-        "count = 0\n",
-        "a = li[:len(li)//2]\n",
-        "b = li[len(li)//2:]\n",
-        "\n",
-        "a+=\"\"\n",
-        "b+=\"\"\n",
-        "\n",
-        "print(\"a = {0}\".format(a))\n",
-        "print(\"b= {0}\".format(b))\n",
-        "\n",
-        "for i in range(len(a)-1):\n",
-        "  for j in range(i,len(a)-1):\n",
-        "    if count!= k :\n",
-        "      if a[i] < a[j+1]:\n",
-        "        a = a.replace(a[i],\" \")\n",
-        "        print(\"re_a = {0}\".format(a))\n",
-        "        count+=1\n",
-        "        break\n",
-        "      else:\n",
-        "        \n",
-        "\n",
-        "for i in range(len(b)-1):\n",
-        "  for j in range(i+1,len(b)-1):\n",
-        "    if count!= k :\n",
-        "      if b[i] < b[j]  :\n",
-        "        b = b.replace(b[i],\" \")\n",
-        "        print(\"re_b = {0}\".format(b))\n",
-        "        count+=1\n",
-        "        break\n",
-        "\n",
-        "result = a+b\n",
-        "\n",
-        "result\n",
-        "  "
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "a = 41772\n",
-            "b= 52841\n",
-            "re_a =  1772\n",
-            "re_a =   772\n",
-            "re_b =  2841\n",
-            "re_b =   841\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'  772  841'"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 115
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 246
+          "height": 251
         },
         "id": "H1K2ONNJRCrd",
-        "outputId": "ae389336-915d-453c-f259-a52518f8100d"
+        "outputId": "f019bb1a-3f63-41fe-d4bf-97b8cac69198"
       },
       "source": [
         "li = \"4177252841\"\n",
@@ -199,13 +117,13 @@
         "for i in range(1,len(a)):\n",
         "  if count!= k :\n",
         "    if sel1 > a[i]:\n",
-        "      a = a.replace(a[i],\" \")\n",
+        "      a = a.replace(a[i],\" \",1)\n",
         "      print(\"re_a = {0}\".format(a))\n",
         "      count+=1     \n",
         "    else:\n",
         "      if a[0] != \" \":\n",
         "        count+=1\n",
-        "        a = a.replace(a[0],\" \")\n",
+        "        a = a.replace(a[0],\" \",1)\n",
         "      \n",
         "      sel1 = a[i]\n",
         "      \n",
@@ -224,8 +142,8 @@
         "    else:\n",
         "      if b[0] != \" \":\n",
         "        count+=1\n",
-        "        b = b.replace(b[0], \" \")\n",
-        "      b = b.replace(sel2, \" \")\n",
+        "        a = a.replace(b[i],\" \",1)\n",
+        "      b = b.replace(sel2, \" \",1)\n",
         "      sel2 = b[i]\n",
         "     \n",
         "   \n",
@@ -234,7 +152,7 @@
         "\n",
         "result"
       ],
-      "execution_count": null,
+      "execution_count": 133,
       "outputs": [
         {
           "output_type": "stream",
@@ -267,20 +185,78 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 190
+          "execution_count": 133
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "kl0uGaRnZnqL"
+        "id": "kl0uGaRnZnqL",
+        "outputId": "8812ad92-4ad3-4ef7-f40f-3cc2db5f2cf3",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 316
+        }
       },
       "source": [
-        ""
+        "li = \"4462\"\n",
+        "k = 2\n",
+        "result = \"\"\n",
+        "count = 0\n",
+        "f=0\n",
+        "s=1\n",
+        "print(\"원본li = {0}\".format(li))\n",
+        "while count < k :\n",
+        "  \n",
+        "  if li[f] < li[s]:\n",
+        "    li = li.replace(li[f],\"\",1)\n",
+        "    print(\"li = {0}\".format(li))\n",
+        "    count+=1  \n",
+        "\n",
+        "  elif li[f] == li[s]:\n",
+        "    if li[f]<li[s+1]:\n",
+        "      li = li.replace(li[f],\"\",1)\n",
+        "      li = li.replace(li[s],\"\",1)\n",
+        "    else:\n",
+        "      f+=1\n",
+        "      s+=1\n",
+        "      \n",
+        "  \n",
+        "  else:\n",
+        "    count+=1\n",
+        "    li = li.replace(li[s],\"\",1)\n",
+        "    print(\"li = {0}\".format(li))\n",
+        "  print(\"count = {0}\".format(count))\n",
+        " \n",
+        "li\n",
+        "  \n",
+        "\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 205,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "원본li = 4462\n",
+            "count = 0\n",
+            "li = 4\n",
+            "count = 1\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "IndexError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-205-d71186ce9b8e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mwhile\u001b[0m \u001b[0mcount\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mk\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m   \u001b[0;32mif\u001b[0m \u001b[0mli\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mli\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m     \u001b[0mli\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mli\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mli\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"li = {0}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mli\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mIndexError\u001b[0m: string index out of range"
+          ]
+        }
+      ]
     }
   ]
 }
