Colaboratory를 통해 생성됨

--- a/Untitled71_ipynb의_사본.ipynb
+++ b/Untitled71_ipynb의_사본.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled71.ipynb의 사본",
       "provenance": [],
-      "authorship_tag": "ABX9TyNhrrZUb2f+E+LJ0UjIPwS1",
+      "authorship_tag": "ABX9TyM2DU4rv4Z9ZD48oV2X4yMM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -152,7 +152,7 @@
         "\n",
         "result"
       ],
-      "execution_count": 133,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -193,70 +193,126 @@
       "cell_type": "code",
       "metadata": {
         "id": "kl0uGaRnZnqL",
-        "outputId": "8812ad92-4ad3-4ef7-f40f-3cc2db5f2cf3",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 316
-        }
+          "height": 334
+        },
+        "outputId": "ee489d00-d35d-4bdd-858b-60610c698c05"
       },
       "source": [
-        "li = \"4462\"\n",
+        "\n",
+        "li = \"111\"\n",
         "k = 2\n",
         "result = \"\"\n",
         "count = 0\n",
-        "f=0\n",
-        "s=1\n",
+        "i = 0\n",
         "print(\"원본li = {0}\".format(li))\n",
-        "while count < k :\n",
-        "  \n",
-        "  if li[f] < li[s]:\n",
-        "    li = li.replace(li[f],\"\",1)\n",
-        "    print(\"li = {0}\".format(li))\n",
-        "    count+=1  \n",
+        "while count != k :\n",
+        "  if i+1 < len(li):\n",
+        "    print(\"TLqkfli={0}\".format(li))\n",
+        "    if li[i] < li[i+1]:\n",
+        "      li = li.replace(li[i],\"\",1)\n",
+        "      print(\"li = {0}\".format(li))\n",
+        "      count+=1  \n",
         "\n",
-        "  elif li[f] == li[s]:\n",
-        "    if li[f]<li[s+1]:\n",
-        "      li = li.replace(li[f],\"\",1)\n",
-        "      li = li.replace(li[s],\"\",1)\n",
+        "      print(\"len(li) = {0}\".format(len(li)))\n",
+        "\n",
+        "    elif li[i] == li[i+1]:\n",
+        "      i+=1\n",
+        "      if li[i] < li[i+1]:\n",
+        "        li = li.replace(li[i],\"\",1)\n",
+        "        li = li.replace(li[i],\"\",1)\n",
+        "        count+=2\n",
+        "        i-=i\n",
+        "\n",
+        "      else:\n",
+        "        li = li.replace(li[i+1],\"\",1)\n",
+        "        count+=1\n",
+        "    \n",
         "    else:\n",
-        "      f+=1\n",
-        "      s+=1\n",
-        "      \n",
-        "  \n",
-        "  else:\n",
-        "    count+=1\n",
-        "    li = li.replace(li[s],\"\",1)\n",
+        "      count+=1\n",
+        "      li = li.replace(li[i+1],\"\",1)\n",
         "    print(\"li = {0}\".format(li))\n",
-        "  print(\"count = {0}\".format(count))\n",
-        " \n",
+        "    print(\"count = {0}\".format(count))\n",
+        "    print(\"len(li) = {0}\".format(len(li)))\n",
         "li\n",
         "  \n",
         "\n"
       ],
-      "execution_count": 205,
+      "execution_count": 377,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "원본li = 4462\n",
-            "count = 0\n",
-            "li = 4\n",
-            "count = 1\n"
+            "원본li = 111\n",
+            "TLqkfli=111\n",
+            "li = 11\n",
+            "count = 1\n",
+            "len(li) = 2\n"
           ],
           "name": "stdout"
         },
         {
           "output_type": "error",
-          "ename": "IndexError",
+          "ename": "KeyboardInterrupt",
           "evalue": "ignored",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-205-d71186ce9b8e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mwhile\u001b[0m \u001b[0mcount\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mk\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m   \u001b[0;32mif\u001b[0m \u001b[0mli\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mli\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m     \u001b[0mli\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mli\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mli\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"li = {0}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mli\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mIndexError\u001b[0m: string index out of range"
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-377-40aab3efd8e1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"원본li = {0}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mli\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mwhile\u001b[0m \u001b[0mcount\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mk\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m   \u001b[0;32mif\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mli\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"TLqkfli={0}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mli\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mli\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mli\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Py5X8cO-afSc"
+      },
+      "source": [
+        " # 백업\n",
+        "  \n",
+        "  elif li[i] == li[i]:\n",
+        "    if li[i+1]<li[i+1]:\n",
+        "      if count+2 < k:\n",
+        "        li = li.replace(li[i],\"\",1)\n",
+        "        li = li.replace(li[i],\"\",1)\n",
+        "        count+=2\n",
+        "      else:\n",
+        "        li = li.replace(li[i],\"\",1)\n",
+        "        count+=1\n",
+        "    else:\n",
+        "      if i+2 <len(li) and i+1 <len(li):\n",
+        "        s+=2\n",
+        "        f+=2\n",
+        "      else:\n",
+        "        s-=1\n",
+        "        f-=1"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rzuavmXGsI-O"
+      },
+      "source": [
+        "    elif li[i] == li[i+1]:\n",
+        "      i+=1\n",
+        "      if li[i] < li[i+1]:\n",
+        "        li = li.replace(li[i],\"\",1)\n",
+        "        li = li.replace(li[i],\"\",1)\n",
+        "        count+=2\n",
+        "        i-=2\n",
+        "\n",
+        "      else:\n",
+        "        li = li.replace(li[i+1],\"\",1)\n",
+        "        count+=1"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
